[package]
name = "web3-rs-wasm"
version = "0.1.0"
authors = ["AchalaSB <achalasbhatt@gmail.com>"]
description = "Ethereum JSON-RPC client."
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.4.10"
ethabi = "8.0.0"
ethereum-types = "0.6.0"
futures = "0.1.26"
jsonrpc-core = "13.0.0"
log = "0.4.6"
parking_lot = "0.9.0"
rustc-hex = "2.0.1"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
tokio-timer = "0.1"
url = "1.7.2"
base64 = "0.10.1"
derive_more = "0.15.0"

[workspace]
